Prevent navbar from obfuscating post banner on mobile (fixes #61)

--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -18,8 +18,18 @@
 		transition: none;
 		margin: 0;
 	}
-}
 
-.banner-margin {
-	margin-top: 35vw;
+	& + h1 {
+		margin-block-start: 35vw;
+	}
+
+	@media only screen and (max-width: 480px) {
+		body:has(&) #site-nav {
+			margin-block-start: 50vw;
+		}
+
+		& + h1 {
+			margin-block-start: 2rem;
+		}
+	}
 }
